SERVER-70445 check existence of TimeseriesOptions before using the time series bucket collection name space